--- a/forms.html
+++ b/forms.html
@@ -12,7 +12,7 @@
         <input type="text" name="Nome" id="Nome">
         <br>
         <label for="Email">E-mail: </label>
-        <input type="text" name="Email" id="Email">
+        <input type="email" name="Email" id="Email">
         <br>
         <label for="senha">Senha:&nbsp; </label>
         <input type="password" name="Senha" id="senha">
