header totalmente pronto com css configurado.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,78 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
+
+<head><!--cabeça da pagina-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+    <link rel="stylesheet" href="style.css">
+    <title>Invicthusconsultoria.com.br</title>
+</head><!--cabeça da pagina-->
+
+<body><!--começo do corpo da pagina-->
     
-</body>
+    <header><!--Inicio cabeçalho-->
+        <nav class="menu">
+            <a href="" class="logo">Gestão de verdade é aqui!</a>
+
+            <ul><!--!lista nao ordenada-->
+                <li><a href="" class="ativo">Home</a></li>
+                <li><a href="">serviços</a></li>
+                <li><a href="">Contato</a></li>
+            </ul>
+        </nav><!--menu-->
+
+        <section class="principal">
+            <h1>Invicthus Consultoria</h1>
+            <p>Transformando o seu negócio em sucesso</p>
+            
+
+            <div class="links">
+                <a href="">Saiba mais!</a>
+            </div>
+        </section><!--principal-->
+
+       <section class="img">
+        <div >
+            <img class="img1" src="./imagens/consult_adm.jpg" alt="homens de terno trabalhando">
+        </div>
+        <div >
+            <img class="img2" src="./imagens/graficos.webp" alt="imagem de graficos">
+        </div>
+        <div >
+            <img class="img3" src="./imagens/codando.jpg" alt="imagem da logo do vscode">
+        </div>
+
+
+       </section>
+
+    </header><!--termino do cabeçalho-->
+
+
+
+
+
+
+
+
+
+
+
+
+<footer><!--inicio rodapé-->
+    <section class="rodape">
+        <div class="rodape1">
+            <p>
+                invicthus.com
+            </p>
+        </div>
+        <div class="rodape2">
+            <p>
+                &copy 2024 - Invicthus Partners | Todos os direitos reservados
+            </p>
+        </div>
+    </section>
+</footer><!--final rodapé-->  
+
+
+</body><!--final corpo da pagina-->
 </html>
